Add migrations and admin user register to RUNONCE

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/minerva
+ADMIN_PASSWORD=admin
 USERS_SERVICE_PORT=9010
 PRODUCTS_SERVICE_PORT=9011
