--- a/minerva-runonce/Cargo.toml
+++ b/minerva-runonce/Cargo.toml
@@ -3,6 +3,10 @@ name = "minerva-runonce"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+diesel_migrations = "1.4.0"
+diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
+minerva-data = {path = "../minerva-data"}
+dotenv = "0.15.0"
+tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
+
