Implement gRPC routes "index" and "show"

--- a/minerva-user/Cargo.toml
+++ b/minerva-user/Cargo.toml
@@ -9,3 +9,6 @@ minerva-data = {path = "../minerva-data"}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 dotenv = "0.15.0"
 tonic = "0.7"
+diesel = { version = "1.4.4", features = ["postgres"] }
+bb8 = "0.7.1"
+bb8-diesel = "0.2.1"
