Finish CRUD for USERS and add proper logging

--- a/minerva-runonce/Cargo.toml
+++ b/minerva-runonce/Cargo.toml
@@ -9,4 +9,4 @@ diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chron
 minerva-data = {path = "../minerva-data"}
 dotenv = "0.15.0"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
-
+chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
