--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -18,3 +18,5 @@ diesel-enum = "0.0.5"
 bb8 = "0.7.1"
 bb8-diesel = "0.2.1"
 sodiumoxide = ">= 0.2.7"
+chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+
