--- a/minerva-store/Cargo.toml
+++ b/minerva-store/Cargo.toml
@@ -3,6 +3,6 @@ name = "minerva-store"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
+chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
