--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/minerva
 ADMIN_PASSWORD=admin
-USERS_SERVICE_PORT=9010
-PRODUCTS_SERVICE_PORT=9011
+USER_SERVICE_PORT=9010
+PRODUCT_SERVICE_PORT=9011
