Add default ports and basic structure for all services

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/minerva
 ADMIN_PASSWORD=admin
+REST_SERVICE_PORT=9000
 USER_SERVICE_PORT=9010
-PRODUCT_SERVICE_PORT=9011
+SESSION_SERVICE_PORT=9011
+PRODUCT_SERVICE_PORT=9012
+STOCK_SERVICE_PORT=9013
+REPORT_SERVICE_PORT=9014
