Start adding documentation graphics

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,4 +3,9 @@ authors = ["Lucas S. Vieira"]
 language = "pt-br"
 multilingual = false
 src = "src"
-title = "Minerva -- Especificação do Sistema"
+title = "Minerva: Especificação do Sistema"
+
+# Install mdbook-graphviz using Cargo so that Graphviz works.
+[preprocessor.graphviz]
+command = "mdbook-graphviz"
+output-to-file = false
