--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde_repr = "0.1"
+toml = "0.5"
 num-traits = "0.2"
 num-derive = "0.3"
 diesel-enum = "0.0.5"
