Add proper logging to `USER` service

--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -20,4 +20,5 @@ bb8 = "0.7.1"
 bb8-diesel = "0.2.1"
 sodiumoxide = ">= 0.2.7"
 chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 
