--- a/tenancy.toml
+++ b/tenancy.toml
@@ -2,11 +2,14 @@
 [[tenants]]
 name = "Minerva System"
 database = "minerva"
+connections = 5
 
 [[tenants]]
 name = "Test Database"
 database = "teste"
+connections = 5
 
 [[tenants]]
 name = "Comercial Fulano S/A"
 database = "comercial-fulano"
+connections = 5
