Add enum for database operation type and some documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
 	"minerva-rpc",
 	"minerva-data",
-	"minerva-store",
+	"minerva-cache",
 	"minerva-user",
 	"minerva-session",
 	"minerva-product",
