Add REST CRUD routes for users

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ADMIN_PASSWORD=admin
-REST_SERVICE_PORT=9000
+ROCKET_PORT=9000
 USER_SERVICE_PORT=9010
 SESSION_SERVICE_PORT=9011
 PRODUCT_SERVICE_PORT=9012
