Add Docker Compose run configuration

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ SESSION_SERVICE_PORT=9011
 PRODUCT_SERVICE_PORT=9012
 STOCK_SERVICE_PORT=9013
 REPORT_SERVICE_PORT=9014
+DATABASE_SERVICE_SERVER=localhost
+USER_SERVICE_SERVER=localhost
+
