--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -3,6 +3,9 @@ name = "minerva-data"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
 diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
