--- a/minerva-cache/Cargo.toml
+++ b/minerva-cache/Cargo.toml
@@ -3,6 +3,9 @@ name = "minerva-cache"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
 chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
