Modify boot order of USER and RUNONCE and improve pgadmin servers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,9 @@ services:
     build:
       dockerfile: build/Dockerfile.USER
       context: .
+    depends_on:
+      runonce:
+        condition: service_completed_successfully
 
   # Database
   postgresql:
