--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     image: postgres:14
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   # pgAdmin 4
   pgadmin:
