--- a/minerva_frontend/pubspec.yaml
+++ b/minerva_frontend/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.17.0
   flutter_neumorphic: ^3.0.3
   fluttericon: ^2.0.0
+  collapsible_sidebar: ^2.0.1+2
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -21,6 +22,17 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 flutter:
   uses-material-design: true
+  fonts:
+    - family: nunitosans
+      fonts:
+        - asset: assets/fonts/nunitosans/NunitoSans-Light.ttf
+          style: normal
+        - asset: assets/fonts/nunitosans/NunitoSans-Regular.ttf
+          weight: 500
+        - asset: assets/fonts/nunitosans/NunitoSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/nunitosans/NunitoSans-ExtraBold.ttf
+          weight: 800
   assets:
     - assets/images/
 
