--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   # Front-End service
   frontend:
+    image: minerva_frontend
     environment:
       - NGINX_PORT=80
     build:
@@ -15,6 +16,7 @@ services:
   
   # REST service
   rest:
+    image: minerva_rest
     environment:
       - USER_SERVICE_SERVER=users
     build:
@@ -27,6 +29,7 @@ services:
   
   # RUNONCE service
   runonce:
+    image: minerva_runonce
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
     build:
@@ -37,6 +40,7 @@ services:
   
   # USERS service
   users:
+    image: minerva_users
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
     build:
@@ -57,6 +61,7 @@ services:
 
   # pgAdmin 4
   pgadmin:
+    image: minerva_pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=admin
