Add cache to Rust library builds on automated tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,9 @@ jobs:
           toolchain: stable
           components: clippy, rustfmt
 
+      - name: Rust build cache
+        uses: Swatinem/rust-cache@v1
+
       # - name: Linter
       #   run: cargo fmt -- --check
 
