--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
 diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
-diesel-enum = "0.0.5"
+diesel-derive-enum = {version = "1.1.2", features = ["postgres"]}
 dotenv = "0.15.0"
 bigdecimal = {version = "0.1.2", features = ["serde"]}
 serde = "1.0"
