Add MongoDB database support and preparations (#8)

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ STOCK_SERVICE_PORT=9013
 REPORT_SERVICE_PORT=9014
 DATABASE_SERVICE_SERVER=localhost
 USER_SERVICE_SERVER=localhost
-
+MONGO_SERVICE_SERVER=localhost
