--- a/minerva-runonce/Cargo.toml
+++ b/minerva-runonce/Cargo.toml
@@ -10,4 +10,4 @@ minerva-data = {path = "../minerva-data"}
 dotenv = "0.15.0"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
-
+mongodb = "2.2.1"
