Add initial base for the SESSION gRPC service (#8)

--- a/minerva-session/Cargo.toml
+++ b/minerva-session/Cargo.toml
@@ -8,3 +8,5 @@ minerva-rpc = {path = "../minerva-rpc"}
 minerva-data = {path = "../minerva-data"}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 dotenv = "0.15.0"
+tonic = "0.7"
+mongodb = "2.2.1"
