--- a/minerva-session/Cargo.toml
+++ b/minerva-session/Cargo.toml
@@ -10,3 +10,5 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 dotenv = "0.15.0"
 tonic = "0.7"
 mongodb = "2.2.1"
+futures-util = "0.3"
+base64 = "0.13.0"
