Rename `routes` to `controller` and add session routes (#8)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     image: minerva_rest
     environment:
       - USER_SERVICE_SERVER=users
+      - SESSION_SERVICE_SERVER=session
     build:
       dockerfile: build/Dockerfile.REST
       context: .
