--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,7 +3,7 @@ authors = ["Lucas S. Vieira"]
 language = "pt-br"
 multilingual = false
 src = "src"
-title = "Sistema Minerva"
+title = "Minerva System"
 
 # Install mdbook-graphviz using Cargo so that Graphviz works.
 [preprocessor.graphviz]
