--- a/minerva-product/Cargo.toml
+++ b/minerva-product/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "minerva-product"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+description = "Product management microservice for the Minerva System"
+authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
