--- a/minerva-runonce/Cargo.toml
+++ b/minerva-runonce/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "minerva-runonce"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Startup job for deploying the Minerva System"
+authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 
 [dependencies]
 diesel_migrations = "1.4.0"
