--- a/minerva-session/Cargo.toml
+++ b/minerva-session/Cargo.toml
@@ -2,6 +2,8 @@
 name = "minerva-session"
 version = "0.1.0"
 edition = "2021"
+description = "User session management microservice for the Minerva System"
+authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
