--- a/minerva-user/Cargo.toml
+++ b/minerva-user/Cargo.toml
@@ -2,6 +2,8 @@
 name = "minerva-user"
 version = "0.2.0"
 edition = "2021"
+description = "User management microservice for the Minerva System"
+authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
