Add warnings on clippy and missing documentation for all modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 [workspace]
+version = "0.2.0"
+authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
+license = "GPLv3"
+edition = "2021"
 members = [
 	"minerva-rpc",
 	"minerva-data",
