--- a/minerva-user/Cargo.toml
+++ b/minerva-user/Cargo.toml
@@ -15,4 +15,4 @@ diesel = { version = "1.4.4", features = ["postgres"] }
 bb8 = "0.7.1"
 bb8-diesel = "0.2.1"
 futures-util = "0.3"
-chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+chrono = {version = "0.4", features = ["serde"]}
