--- a/minerva-product/Cargo.toml
+++ b/minerva-product/Cargo.toml
@@ -12,4 +12,4 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 dotenv = "0.15.0"
 tonic = "0.7"
 diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
-chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+chrono = {version = "0.4", features = ["serde"]}
