--- a/minerva-stock/Cargo.toml
+++ b/minerva-stock/Cargo.toml
@@ -11,4 +11,4 @@ minerva-data = {path = "../minerva-data"}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
 dotenv = "0.15.0"
 diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chrono"]}
-chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+chrono = {version = "0.4", features = ["serde"]}
