--- a/deploy/frontend-deployment.yml
+++ b/deploy/frontend-deployment.yml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
         - name: frontend-container
-          image: luksamuk/minerva_frontend:latest
+          image: luksamuk/minerva_frontend:0.1.0
           ports:
             - containerPort: 80
           envFrom:
