--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   # Front-End service
   frontend:
-    image: luksamuk/minerva_frontend:latest
+    image: luksamuk/minerva_frontend:0.1.0
     environment:
       - NGINX_PORT=80
     ports:
