--- a/minerva-runonce/Cargo.toml
+++ b/minerva-runonce/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "minerva-runonce"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 description = "Startup job for deploying the Minerva System"
 authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
@@ -11,5 +11,5 @@ diesel = {version = "1.4.8", features = ["postgres", "extras", "numeric", "chron
 minerva-data = {path = "../minerva-data"}
 dotenv = "0.15.0"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync"]}
-chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
+chrono = {version = "0.4", features = ["serde"]}
 mongodb = "2.2.1"
