--- a/minerva-rest/Cargo.toml
+++ b/minerva-rest/Cargo.toml
@@ -13,3 +13,6 @@ rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
 tonic = "0.7"
 serde = "1.0"
 serde_json = "1.0"
+
+[dev-dependencies]
+serial_test = "0.7.0"
