--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,12 +7,13 @@ on:
 jobs:
   build-docs:
     runs-on: ubuntu-latest
+    container:
+      image: fedora:36
     steps:
       - name: Install Graphviz and PlantUML
         run: |
-          sudo apt update
-          sudo apt install -y graphviz plantuml
-
+          dnf install -y graphviz plantuml
+        
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
