Change docs deployment locale

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Adjust locale
         run: |
-          dnf install -y langpaths-pt_BR
+          dnf install -y langpacks-pt_BR
           localectl set-locale LANG=pt_BR.UTF-8
           localedef --verbose --force -i pt_BR -f UTF-8 pt_BR.UTF-8
       
