--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,12 @@ services:
   rest:
     image: luksamuk/minerva_rest:latest
     environment:
-      - USER_SERVICE_SERVER=users
+      - USER_SERVICE_SERVER=user
       - SESSION_SERVICE_SERVER=session
     ports:
       - 9000:9000
     depends_on:
-      - "users"
+      - "user"
     networks:
       - minerva_system
     deploy:
@@ -47,9 +47,9 @@ services:
       restart_policy:
         condition: on-failure
   
-  # USERS service
-  users:
-    image: luksamuk/minerva_users:latest
+  # USER service
+  user:
+    image: luksamuk/minerva_user:latest
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
     networks:
