--- a/deploy/user-deployment.yml
+++ b/deploy/user-deployment.yml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-deployment
+  name: user-deployment
 spec:
   template:
     metadata:
-      name: users
+      name: user
       labels:
-        app: users
+        app: user
     spec:
       containers:
-        - name: users-container
-          image: luksamuk/minerva_users:0.2.1
+        - name: user-container
+          image: luksamuk/minerva_user:0.2.2
           ports:
             - containerPort: 9010
           envFrom:
@@ -25,5 +25,5 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: users
+      app: user
 
