--- a/deploy/user-svc.yml
+++ b/deploy/user-svc.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: users-svc
+  name: user-svc
 spec:
   type: ClusterIP
   selector:
-    app: users
+    app: user
   ports:
     - port: 9010
 
