Add scripts for creating local test Redis and change documentation

--- a/deploy/postgresql-deployment.yml
+++ b/deploy/postgresql-deployment.yml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
         - name: postgresql-container
-          image: postgres:14
+          image: postgres:14-alpine
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
@@ -25,6 +25,7 @@ spec:
         - name: postgresql-pv
           persistentVolumeClaim:
             claimName: postgresql-pvc
+  replicas: 1
   selector:
     matchLabels:
       app: postgresql
