--- a/deploy/mongodb-deployment.yml
+++ b/deploy/mongodb-deployment.yml
@@ -25,6 +25,7 @@ spec:
         - name: mongodb-pv
           persistentVolumeClaim:
             claimName: mongodb-pvc
+  replicas: 1
   selector:
     matchLabels:
       app: mongodb
